# Advent-of-Code-2025

./: .gitignore  CMakeLists.txt  add_day.sh  pyproject.toml
day01/: main.cpp
day02/: main.cpp
day03/: main.cpp
day04/: main.cpp
day05/: main.cpp
day06/: main.cpp
day07/: main.cpp
day08/: main.cpp
day09/: main.cpp  test.py
day10/: main.cpp  main.py  main2.py
day11/: main.cpp
day12/: main.cpp
utils/: easyTimer.hpp  fraction.h  point.h  utils.h
