cmake_minimum_required(VERSION 3.31)
project(avoc2025)

set(CMAKE_CXX_COMPILER g++-14)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_EXTENSIONS OFF)
add_compile_options(-Wall -Wextra -Werror)

add_executable(day01 day01/main.cpp utils/)
add_executable(day02 day02/main.cpp utils/)
add_executable(day03 day03/main.cpp utils/)
add_executable(day04 day04/main.cpp utils/)
add_executable(day05 day05/main.cpp utils/)
add_executable(day06 day06/main.cpp utils/)
add_executable(day07 day07/main.cpp utils/)
add_executable(day08 day08/main.cpp utils/)
add_executable(day09 day09/main.cpp utils/)
add_executable(day10 day10/main.cpp utils/)
add_executable(day11 day11/main.cpp utils/)
add_executable(day12 day12/main.cpp utils/)
